# EU-Economy-Bot

./: README.md  commands.py  config.py  database.py  embeds.py  eval.py  jobs.txt  main.py  methods.py  pyproject.toml  quiz.py  server.py
