[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "eu-economy-bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
pymongo = "^3.10"
[tool.poetry.dev-dependencies]
